--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,5 +20,6 @@
         
         <div id="content"></div>
         <div id="error"></div>
+        <script src="main.js"></script>
     </body>
 </html>
